fixed unintentional button resizing
the button would get too small if the quote was short

--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,11 @@ p {
   padding: 5px;
   padding-left: 0px; /* may need to change this later, tried to get the "background image" as close as I could to the center || background image is a bit jank but this is the only way I could get the hover to work */
   margin: auto;
+  min-width: 27px;
   min-height: 15px;
-  min-width: 20px;
+  max-width: 27px;
+  max-height: 15px;
+  
   background-image: url("../icons/refresh1.png");
   background-size: contain;
   background-repeat: no-repeat;
